Use custom generator for schemas
