# test-packages/test-services/openapi/swagger-yaml-service/default-api.ts
@@ -4,7 +4,7 @@
  * This is a generated file powered by the SAP Cloud SDK for JavaScript.
  */
 import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
-import { TestEntity } from './openapi/model';
+import { TestEntity } from './model';
 
 export const SwaggerYamlServiceDefaultApi = {
   postEntity: (pathParam: string, queryParameters?: {'queryParam'?: string}) => new OpenApiRequestBuilder(
