# test-packages/test-services/openapi/swagger-yaml-service/model/index.ts
@@ -3,7 +3,4 @@
  *
  * This is a generated file powered by the SAP Cloud SDK for JavaScript.
  */
-      
-      export type SimpleTestEntity = {
-    stringProperty: string;
-  } | Record<string, any>;
+    export * from './test-entity';
